
svn trunk
---------

* You can use ``+dot+`` in your project template filenames,
  specifically so that you can use leading dots in the filename.
  Usually leading dots cause the file to be ignored.  So if you want
  to have new projects contain a ``.cvsignore`` file, you can put a
  ``+dot+cvsignore`` file in your template.

* Relatedly, ``+plus+`` has been added so you can include pluses.

1.3.2
-----

* ``paster`` was largely broken under Windows; fixed.

1.3.1
-----

* Fix related to Python 2.5 (when there are errors creating files, you
  could get infinite recursion under Python 2.5).

* Use ``subprocess`` module in ``paster serve`` command.  Added
  ``--monitor`` option which will restart the server if it exits.

* The ``exe`` command now does % substitution in keys (e.g.,
  ``pid_file=%(here)s/paste.pid``).

* Some import problems with Cheetah should be improved.

1.3
---

* Fixed an exception being raised when shutting down flup servers using
  sockets.

* Fixed the CherryPy 3 WSGI server entry point's handling of SIGHUP
  and SIGTERM.

* The CherryPy wsgiserver is now available at
  ``paste.script.wsgiserver`` (no longer requiring CherryPy to be
  installed).

* Added entry point for twisted server.

* Made ``paste.script.pluginlib:egg_info_dir`` work with packages that
  put the ``Package.egg-info/`` directory in a subdirectory (typically
  ``src/``).

* Remove Cheetah requirement.  Packages using Cheetah templates should
  require Cheetah themselves.  If you are using ``paster make-config``
  and you *don't* want to use Cheetah, you must add ``use_cheetah =
  False`` to your ``Installer`` subclass (it defaults to true for
  backward compatibility).

* Make scripts work when there is no ``setup.py`` (if you aren't
  making a Python/setuptools package).

* When using ``paste.script.copydir.copy_dir`` (as with most ``paster
  create`` templates), you can raise ``SkipTemplate`` (or call the
  ``skip_template()`` function) which will cause the template to be