@@ -12,6 +12,10 @@ svn trunk
 
 * Relatedly, ``+plus+`` has been added so you can include pluses.
 
+* Fixed problem with ``paster serve`` on Windows and Python 2.5.  Also
+  on Windows, fixed issue with executables with spaces in their names
+  (this case requires the ``win32all`` module).
+
 1.3.2
 -----
 
